2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Use install-data-local to install startfile.

2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-11-07	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Include all .rodata* sections.

2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* start/start.S, startup/hw_init.c: Removed warnings.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-09-14	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: As part of fixing PR281 on gensh4, a review
	of all calls to bsp_libc_init() resulted in some cleanup here.

2002-08-21	Joel Sherrill <joel@OARcorp.com>

	* bsp_specs: Added support for -nostdlibs.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* scitab/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* start/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* startup/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-25	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Added __EH_FRAME_BEGIN__ and __EH_FRAME_END__
	to remove problems linking empty main(){} with BSP.

2002-07-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Eliminate PGMS.
	Add bsplib_DATA = $(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o.

2002-07-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* startup/Makefile.am: Add bsplib_DATA = linkcmds.

2002-07-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Eliminate TMPINSTALL_FILES.
	Remove $(OBJS) from all-local.

2002-06-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Remove preinstallation of libbsp.a,

2001-05-09	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: In support of gcc 3.1, added one of more